add kafka for friendship Request